added preview image

--- a/_posts/2025-09-10-compiled.md
+++ b/_posts/2025-09-10-compiled.md
@@ -5,6 +5,7 @@ date: 2025-09-10 01:39 +0530
 categories: [ctf, tryhackme]
 tags: [c, reverse-engineering]
 description: "A Tale of a Flawed scanf"
+image: /assets/posts/compiled/compiled.svg
 ---
 
 Welcome to my write-up for a fun little
